# npss

./: .gitignore  README.md  pyproject.toml
.github/: badge.py
.github/workflows/: main.yml
npss/: __init__.py  npss.py
test/: test_npss.py
